# ssmvd

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/SSM_restricted_voronoi_diagram/: CMakeLists.txt  profiling.cpp  random_site_cells.cpp  random_sites.cpp  simple_viewer.cpp
examples/SSM_voronoi_diagram/: random.cpp  step.cpp
examples/Surface_Voronoi_diagram_with_star_metrics/: CMakeLists.txt  profiling.cpp  random_site_cells.cpp  random_sites.cpp  simple_viewer.cpp
examples/Voronoi_diagram_with_star_metrics_2/: CMakeLists.txt  grid_sites.cpp  random.cpp  random_sites.cpp  step.cpp
include/: SSM_restricted_voronoi_diagram.h  SSM_voronoi_diagram.h  Surface_Voronoi_diagram_with_star_metrics.h  Voronoi_diagram_with_star_metrics_2.h  ssmrvd.hpp
include/IO/: Verbosity_level_ostream.h
include/Parametric_line/: Parametric_line_2.h  Parametric_line_3.h
include/SSM_restricted_voronoi_diagram/: AABB_metric_traits.h  Parametric_line_3.h  SSM_restricted_voronoi_diagram.h  SSM_restricted_voronoi_diagram_traits.h  Triangle_mesh_metric_traits.h  Verbosity_level_ostream.h
include/SSM_voronoi_diagram/: Polygon_2_vertex_pair_circulator.h  Polygon_metric_traits.h  SSM_voronoi_diagram.h  SSM_voronoi_diagram_traits.h
include/Surface_Voronoi_diagram_with_star_metrics/: AABB_metric_traits.h  Surface_Voronoi_diagram_with_star_metrics.h  Surface_Voronoi_diagram_with_star_metrics_traits.h  Triangle_mesh_metric_traits.h
include/Utils/: Graph_helper.h  Overloaded.h
include/Voronoi_diagram_with_star_metrics_2/: Polygon_2_vertex_pair_circulator.h  Polygon_metric_traits.h  Voronoi_diagram_with_star_metrics_2.h  Voronoi_diagram_with_star_metrics_2_traits.h
include/ssmrvd/: Parametric_line_3.hpp  SSM_restricted_voronoi_diagram_traits.hpp
src/: main.cpp
tests/: CMakeLists.txt
tests/SSM_voronoi_diagram/: Simple_cartesian_find_intervals.cpp  Simple_cartesian_random.cpp
tests/Voronoi_diagram_with_star_metrics_2/: Simple_cartesian_find_intervals.cpp  Simple_cartesian_random.cpp
